--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.57",
     "@mui/material": "^5.2.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.26.0",
     "html-react-parser": "^1.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
