--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.26.0",
+    "firebase": "^9.5.0",
     "html-react-parser": "^1.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
